# viammo-frontend-bolt-figma-v0

./: .env.template  .gitignore  Procfile  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.css  vite.config.ts
backend/: .env.template  Procfile  README.md  hotel_reservation_search_keywords.jsonl  mongo_api_server.py  pyproject.toml  requirements.txt  scan_email_utils.py  search_hotels_for_trip.py  search_utils.py
scripts/: README.md  mongo_api_server.py
src/: App.tsx  env.ts  index.css  index.tsx  vite-env.d.ts
src/components/ui/: dialog.tsx  switch.tsx
src/contexts/: TripContext.tsx
src/screens/: TestScreen.tsx
src/screens/BuildANewTrip/: BuildANewTrip.tsx  index.ts
src/screens/TripDraftCalendar/: TripDraftCalendar.tsx  index.ts
src/screens/TripElementDetail/: TripElementDetail.tsx
src/screens/Trips/: Trips.tsx
src/services/: api.ts  types.ts
