[project]
name = "backend"
version = "0.1.0"
description = "Backend for viammo frontend made with figma + bolt + windsurf"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask",
    "flask_cors",
    "flask_executor",
    "pymongo",
    "python-dotenv",
    "openai",
    "langchain",
    "langchain_openai",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
]
