[project]
name = "backend"
version = "0.1.0"
description = "Backend for viammo frontend made with figma + bolt + windsurf"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask",
    "flask_cors",
    "flask_executor",
    "langchain>=0.3.21",
    "langchain-openai>=0.3.11",
    "pymongo",
    "python-dotenv",
    "openai",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
]
